--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,4 +1,5 @@
 name: Labeler
+
 on:
   pull_request:
     types: [labeled]
@@ -11,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Echo
-        run: echo 'funcionou'
+        run: echo github.event
