--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Echo
-        run: echo github.event
+        run: echo "Hello ${{ github.event }}!"
