--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,9 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
+        uses: actions/checkout@v2
         with:
-          who-to-greet: "Leo"
+          who-to-greet: "Ania"
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
