--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: actions/checkout@v2
+        uses: LeonardoMessias98/github_workflow_ci@v2
         with:
           who-to-greet: "Ania"
       # Use the output from the `hello` step
