--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -17,16 +17,4 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Echo
-        run: echo "Hello ${{ github.event }} - ${{ github.sha }} - ${{ github.ref_name }} - ${{ github.ref }} - ${{ runner.name }}"
-
-      - name: Branch name
-        env:
-          GITHUB_REF: ${{ toJSON(github.ref) }}
-        run: echo running on branch ${GITHUB_REF##*/}
-
-      - name: Extract branch name
-        env:
-          GITHUB_REF: ${{ toJSON(github.ref) }}
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+        run: echo "PR Aprovada - Aguardando Revisão da qualidade -> ${{ github.event.pull_request._links.html.href }} "
