--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -17,4 +17,4 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Echo
-        run: git merge ${{ github.base_ref }} -f
+        run: git merge ${{ github.base_ref }}
