--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -17,4 +17,6 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Echo
+        run: git fetch
+        run: git checkout ${{ github.head_ref }}
         run: git merge ${{ github.base_ref }}
