--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -20,4 +20,4 @@ jobs:
         run: |
           git fetch
           git checkout ${{ github.head_ref }}
-          git merge ${{ github.base_ref }}
+          git merge origin/${{ github.base_ref }}
