--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Merge
-        if: ${{ (github.base_ref === 'develop' && !contains(github.head_ref, 'hotfix')) ||  github.base_ref === 'master' }}
+        if: ${{ (github.base_ref == 'develop' && !contains(github.head_ref, 'hotfix')) ||  github.base_ref == 'master' }}
         run: |
           git fetch
           git checkout ${{ github.head_ref }}
