updating github workflow

--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -1,16 +1,22 @@
-name: Close Pull Request
+name: Merge Master
 
-# only trigger on pull request closed events
 on:
   pull_request:
     types: [closed]
 
 jobs:
   merge_job:
-    # this job will only run if the PR has been merged
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    
     steps:
-      - run: |
-          echo PR #${{ github.event.number }} has been merged
-          echo ${{ toJSON(github)}}
+      - uses: actions/checkout@v2
+      - name: Merge Master
+        if: ${{ github.base_ref == 'master' }}
+        - run: |
+            git fetch
+            git checkout develop
+            git config --global user.email "messiasleonardo98@gmail.com"
+            git config --global user.name "LeonardoMessias98"
+            git merge origin/master
+            git push origin develop
