--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -18,5 +18,5 @@ jobs:
           git checkout develop
           git config --global user.email "messiasleonardo98@gmail.com"
           git config --global user.name "LeonardoMessias98"
-          git merge origin/master --allow-unrelated-histories
+          git merge -Xignore-space-change origin/master --allow-unrelated-histories
           git push origin develop
