updating github workflow

--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -15,9 +15,11 @@ jobs:
       - name: Merge
         if: ${{ github.base_ref == 'master' }}
         run: |
-          git fetch
-          git checkout develop
           git config --global user.email "messiasleonardo98@gmail.com"
           git config --global user.name "LeonardoMessias98"
+          git fetch
+          git checkout master
+          git pull origin master
+          git checkout develop
           git merge origin/master
           git push origin develop
