updating github workflow

--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -15,11 +15,15 @@ jobs:
       - name: Merge
         if: ${{ github.base_ref == 'master' }}
         run: |
-          git config --global user.email "messiasleonardo98@gmail.com"
-          git config --global user.name "LeonardoMessias98"
           git fetch
           git checkout master
-          git pull origin master
-          git checkout develop
-          git merge origin/master
-          git push origin develop
+          git log --oneline
+          git status
+          # git config --global user.email "messiasleonardo98@gmail.com"
+          # git config --global user.name "LeonardoMessias98"
+          # git fetch
+          # git checkout master
+          # git pull origin master
+          # git checkout develop
+          # git merge origin/master
+          # git push origin develop
