--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -18,7 +18,7 @@ jobs:
           git fetch
           git checkout master
           git pull
-          git log --oneline
+          git log 
           # git config --global user.email "messiasleonardo98@gmail.com"
           # git config --global user.name "LeonardoMessias98"
           # git fetch
