--- a/.github/workflows/close_pr.yml
+++ b/.github/workflows/close_pr.yml
@@ -1,26 +1,26 @@
-name: Merge Master
+# name: Merge Master
 
-on:
-  workflow_dispatch:
-  pull_request:
-    types: [closed]
+# on:
+#   workflow_dispatch:
+#   pull_request:
+#     types: [closed]
 
-jobs:
-  build:
-    # if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     # if: github.event.pull_request.merged == true
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Merge
-        # if: ${{ github.base_ref == 'master' }}
-        run: |
-          git clone https://github.com/LeonardoMessias98/github_workflow_ci
-          git config --global user.email "messiasleonardo98@gmail.com"
-          git config --global user.name "LeonardoMessias98"
-          git fetch
-          git checkout master
-          git pull origin master
-          git checkout develop
-          git merge master --allow-unrelated-histories
-          git push origin develop
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Merge
+#         # if: ${{ github.base_ref == 'master' }}
+#         run: |
+#           git clone https://github.com/LeonardoMessias98/github_workflow_ci
+#           git config --global user.email "messiasleonardo98@gmail.com"
+#           git config --global user.name "LeonardoMessias98"
+#           git fetch
+#           git checkout master
+#           git pull origin master
+#           git checkout develop
+#           git merge master --allow-unrelated-histories
+#           git push origin develop
