--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: "schedule"
 on:
   schedule:
-    - cron:  '*/2 * * * *'    # At every 15th minute
+    - cron:  '1 * * * *'    # At every 15th minute
 
 jobs:
   singleJobName:
