--- a/.github/workflows/schedule2.yml
+++ b/.github/workflows/schedule2.yml
@@ -1,15 +1,12 @@
- daily-run-workflow:
-   triggers:
-     - schedule:
-         cron: "1 * * * *"
-         filters:
-           branches:
-             only:
-               - master
-   jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v1
-        - name: Every time
-          run: echo "This step will always run"
+name: "other_schedule"
+on:
+  schedule:
+  - cron: "*/1 * * * 1-5"
+jobs:
+  my_job:
+    name: deploy to staging
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v1
+    - name: Echo some text
+      run: echo teste
